Fixed bug #32139 (SOAP client does not auto-handle base64 encoding).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@191639 c90b9560-bf6c-de11-be94-00142212c4b1